# swipik

./: .dropboxignore  .env.development  .env.example  .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  swipik.html  vite.config.js
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/swipik/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
electron/: main.cjs  preload.cjs
src/: App.jsx  index.css  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Done.jsx  DropboxPicker.jsx  FolderPicker.jsx  ModeSelect.jsx  PermissionsSetup.jsx  Rater.jsx  Sorter.jsx
src/lib/: androidFs.js  dropbox.js  localFs.js  tauriShim.js
